# gqlxy-client

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  ROADMAP.md  vcpkg.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: ci.yml  vcpkg-publish.yml
cmake/: coverage.cmake  dependencies.cmake  gqlxy-client-config.cmake.in
docs/: api-reference.md  getting-started.md  index.mdx  subscriptions.md
docs/caching/: cache.md
docs/core/: mutations.md  queries.md  subscriptions.md
docs/transports/: links.md
include/gqlxy/: cache.h  client.h  link.h  observable.h  print.h  results.h  subscription.h  task.h
include/gqlxy/cache/: in_memory_cache.h  type_policy.h
include/gqlxy/client/: cache.h  client.h  fetch_policy.h  link.h  observable.h  print.h  results.h
include/gqlxy/client/cache/: in_memory_cache.h
include/gqlxy/client/client/: results.h
include/gqlxy/client/links/: http_link.h  split_link.h  ws_link.h
include/gqlxy/client/transforms/: add_typename.h
include/gqlxy/links/: http_link.h  split_link.h  sse_link.h  ws_link.h
include/gqlxy/transforms/: add_typename.h
ports/gqlxy-client/: portfile.cmake  usage  vcpkg.json
samples/: CMakeLists.txt
samples/repl/: CMakeLists.txt  main.cpp
samples/simple/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/gqlxy/: client.cpp  print.cpp
src/gqlxy/cache/: in_memory_cache.cpp
src/gqlxy/client/: client.cpp  print.cpp
src/gqlxy/client/cache/: in_memory_cache.cpp
src/gqlxy/client/internal/: asio_context.h  url.h
src/gqlxy/client/internal/http/: http_stream.cpp  http_stream.h  http_stream_base.h  https_stream.cpp  https_stream.h  i_http_stream.h  response.cpp  response.h  serialization.h
src/gqlxy/client/internal/ws/: i_ws_stream.h  ws_stream.cpp  ws_stream.h  ws_stream_base.h  ws_transport.cpp  ws_transport.h  wss_stream.cpp  wss_stream.h
src/gqlxy/client/internal/ws/connection/: ws_connection_context.cpp  ws_connection_context.h
src/gqlxy/client/links/: http_link.cpp  split_link.cpp  ws_link.cpp
src/gqlxy/client/transforms/: add_typename.cpp
src/gqlxy/internal/: asio_context.h  query_parser.cpp  query_parser.h  ssl_context.h  url.cpp  url.h
src/gqlxy/internal/http/: http_body_subscription.cpp  http_body_subscription.h  http_stream.cpp  http_stream.h  http_stream_base.h  https_stream.cpp  https_stream.h  i_http_stream.h  response.cpp  response.h  serialization.h
src/gqlxy/internal/utils/: optional.h  ranges.h  visit.h
src/gqlxy/internal/ws/: ws_connection.cpp  ws_connection.h  ws_stream.cpp  ws_stream.h  ws_stream_base.h  ws_transport.cpp  ws_transport.h  wss_stream.cpp  wss_stream.h
src/gqlxy/internal/ws/connection/: ws_connection_context.cpp  ws_connection_context.h
src/gqlxy/internal/ws/connection/state/: connected_state.cpp  connected_state.h  connecting_state.cpp  connecting_state.h  i_connection_state.h  idle_state.cpp  idle_state.h  reconnecting_state.cpp  reconnecting_state.h
src/gqlxy/links/: http_link.cpp  split_link.cpp  sse_link.cpp  ws_link.cpp
src/gqlxy/transforms/: add_typename.cpp
tests/: CMakeLists.txt  to_result.h
tests/e2e/: CMakeLists.txt  client.e2e.tests.cpp  main.cpp  server_fixture.h  test_certs.h
tests/e2e/server/: schema.h
tests/unit/: CMakeLists.txt  add_typename.tests.cpp  cache.tests.cpp  http_link.tests.cpp  parse_sse_events.tests.cpp  print.tests.cpp  query_parser.tests.cpp  ssl.tests.cpp  ws_link.tests.cpp
